parallax z-index fixed, cover parallax improved,

--- a/JMFproject/assets/gstring/components/_global.scss
+++ b/JMFproject/assets/gstring/components/_global.scss
@@ -1,4 +1,4 @@
-body { margin: 0; font-family: $global-font-family;}
+body { z-index:0; margin: 0; font-family: $global-font-family;}
 
 strong {}
 ol, ul { margin: 0 0 $global-margin*2  $global-margin*2; padding: 0; }
