--- a/JMFproject/assets/gstring/main.css
+++ b/JMFproject/assets/gstring/main.css
@@ -420,6 +420,7 @@ a:hover, a:focus, a.active {
 
 /********** END FONT **********/
 body {
+  z-index: 0;
   margin: 0;
   font-family: Arial; }
 
@@ -646,11 +647,11 @@ pre {
   margin-left: 10%; }
 
 .para-item-wrapper .item5 {
-  width: 40px;
-  height: 40px;
+  width: 200px;
+  height: 200px;
   opacity: 0.1;
-  left: calc(50% - 550px);
-  top: calc(50% - 140px);
+  left: calc(50% - 745px);
+  top: calc(50% - -59px);
   position: absolute;
   margin-left: 10%; }
 
@@ -673,11 +674,11 @@ pre {
   margin-left: 10%; }
 
 .para-item-wrapper .item8 {
-  width: 30px;
-  height: 40px;
-  opacity: 0.1;
-  left: calc(5% - 20px);
-  top: calc(13% - 20px);
+  width: 700px;
+  height: 700px;
+  opacity: 0.02;
+  left: calc(5% - 350px);
+  top: calc(50% - 500px);
   position: absolute;
   margin-left: 10%; }
 
@@ -690,65 +691,21 @@ pre {
   position: absolute;
   margin-left: 10%; }
 
-/*title items*/
 .para-item-wrapper .item10 {
-  width: 140px;
-  height: 40px;
-  opacity: 0.3;
-  left: calc(50% - 247px);
-  top: calc(50% - 338px);
+  width: 800px;
+  height: 800px;
+  opacity: 0.01;
+  left: calc(50% - 20px);
+  top: calc(50% - 20px);
   position: absolute;
   margin-left: 10%; }
 
 .para-item-wrapper .item11 {
-  width: 140px;
-  height: 40px;
-  opacity: 0.3;
-  left: calc(50% - 195px);
-  top: calc(50% - 338px);
-  position: absolute;
-  margin-left: 10%; }
-
-.para-item-wrapper .item12 {
-  width: 140px;
-  height: 40px;
-  opacity: 0.3;
-  left: calc(50% - 95px);
-  top: calc(50% - 338px);
-  position: absolute;
-  margin-left: 10%; }
-
-@media only screen and (max-width: 520px) {
-  .para-item-wrapper .item10 {
-    left: calc(50% - 179px);
-    top: calc(50% - 303px); }
-
-  .para-item-wrapper .item11 {
-    left: calc(50% - 100px);
-    top: calc(50% - 303px); }
-
-  .para-item-wrapper .item12 {
-    left: calc(50% - 30px);
-    top: calc(50% - 303px); } }
-@media only screen and (max-width: 960px) {
-  .para-item-wrapper .item10 {
-    left: calc(50% - 192px);
-    top: calc(50% - 303px); }
-
-  .para-item-wrapper .item11 {
-    left: calc(50% - 143px);
-    top: calc(50% - 303px); }
-
-  .para-item-wrapper .item12 {
-    left: calc(50% - 40px);
-    top: calc(50% - 303px); } }
-/*title items*/
-.para-item-wrapper .item13 {
   width: 250px;
   height: 250px;
-  opacity: 0.6;
-  left: calc(0% - 10px);
-  top: calc(65% - 10px);
+  opacity: 0.05;
+  left: calc(50% - 20px);
+  top: calc(50% - 20px);
   position: absolute;
   margin-left: 10%; }
 
